--- a/style.css
+++ b/style.css
@@ -40,11 +40,10 @@ svg {
   max-width: 100%;
 }
 
-.container {
+main {
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
 }
 
 .qr-card {
